--- a/index.html
+++ b/index.html
@@ -1,160 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <link rel="stylesheet" href="./styles/reset.css">
-    <link rel="stylesheet" href="./styles/main.css">
-    <link rel="stylesheet" href="./styles/output.css">
-
     <title>Document</title>
-
+    <link rel="stylesheet" href="./style/main.scss">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
+    <script src="./main.js" defer></script>
 </head>
-
 <body>
-    <header class="header">
-        <div class="container max-w-screen-2xl mx-auto pt-7 pb-7 flex pl-3 pr-3 justify-between items-center">
-            <img src="./img/logo.png" alt="">
-            <div class="flex gap-5 items-center">
-                <img src="./img/time.svg" alt="Иконка времени" class="time">
-                <div class="time__block">
-                    <p class="text-sm text-white leading-3">Monday - Sunday</p>
-                    <span class="text-sm text-white leading-3">9am - 9pm</span>
-                </div>
-            </div>
-            <div class="geo flex gap-5 max-w-80">
-                <img src="./img/geo.svg" alt="Иконка геолокации" class="get__img flex">
-                <address class="flex  items-center text-white font-thin leading-4">
-                    Revival Clinic, 2nd Floor, Circle Mall,
-                    JVC, Barsha South 4,Dubai, UAE
-                </address>
-            </div>
-            <div class="contact flex items-center gap-6">
-                <a href="tel:89999999">
-                    <img src="./img/tel.svg" alt="Иконка телефона">
-
-                </a>
-                <a href="#">
-                    <img src="./img/whats.svg" alt="Иконка whats up">
-                </a>
-                <button class="pt-5 pb-5 pr-7 pl-7 border rounded-3xl bg-gray-200 text-lg font-bold text-main-blue">MAKE
-                    A RESERVATION</button>
-
-            </div>
-
-        </div>
-
+    <header>
+        <div class="container header__container">
+            <div class="logo">
+                <img src="../src/img/logo.jpg" alt="логотип">
+            </div>  
+   
     </header>
-    <main class="main">
-        <section class="sculptra">
-            <div class="container container max-w-screen-2xl mx-auto">
-                <div>
-                    <div class="">
-                        <img src="" alt="местоположение">
-                        <span>5,0</span>
-                        <img src="" alt="оценка на гугл мапс">
-                        <span> (38)</span>
-                    </div>
-                    <img src="./img/podzogolok.png" alt="подзоголовок сайта">
+    <div class="container">
+        <div class="modal">
+            <div class="authorization__content modal-window">
+                <h1 class="authorization__title">Авторизация</h1>
+                <div class="authorization__block">
+                    <input type="text" placeholder="Логин" class="login user">
+                    <input type="password" placeholder="Пароль" class="password user">
+                    <button class="exit">Вход</button>
                 </div>
             </div>
-        </section>
-        <section class="advantage">
-            <div class="container">
-                <ul>
-                    <li>
-                        <span>1/</span>
-                        <p>boosts your own skin <span>natural collagen</span> stimulation</p>
-                    </li>
-                    <li>
-                        <span>2/</span>
-                        <p> <span>bpainless treatment</span>, takes only 15-20 minutes</span> stimulation</p>
-                    </li>
-                    <li>
-                        <span>3/</span>
-                        <p>helps <span>restore</span>
-                            lost <span>
-                                facial volume
-                            </span> due
-                            to aging</p>
-                    </li>
-                    <li>
-                        <span>4/</span>
-                        <p>unique and
-                            <span>
-                                unmatched production
-                            </span> technology </p>
-                    </li>
-                    <li>
-                        <span>5/</span>
-                        <p>long lasting results <span>up to 25 months</span></p>
-                    </li>
-                </ul>
-            </div>
-        </section>
-
-        <section class="time">
-            <div class="container">
-                <div>
-                    <p>
-                        AED 2,500
-                    </p>
-                    <p>
-                        AED 3,250
-                    </p>
-                </div>
-                <div>
-                    <img src="" alt="">
-                    <ul class="timer__list">
-                        <li class="timer__item">
-                            <span class="days">01</span>
-                            <p>days</p>
-                        </li>
-                        <li class="timer__item">
-                            <span class="hours">12</span>
-                            <p>hours</p>
-                        </li>
-                        <li class="timer__item">
-                            <span class="minutes">05</span>
-                            <p>Minutes</p>
-                        </li>
-                        <li class="timer__item">
-                            <span class="seconds">40</span>
-                            <p>Seconds</p>
-                        </li>
-                    </ul>
-                </div>
-                <button>
-                    book now
-                </button>
-            </div>
-        </section>
-        <section>
-            <div class="container">
-                <div class="kviz">
-                    <h2>
-                        КВИЗ
-                    </h2>
-                </div>
-            </div>
-        </section>
-        <section class="Benefits ">
-            <div class="container">
-                <h2>Benefits 
-                    Of Sculptra Treatment</h2>
-                    <ul>
-                        <li>
-                            <img src="./img/sculp1.jpg" alt="">
-                            <h3>Reduces Wrinkles 
-                                and Fine Lines</h3>
-                            <p>Effectively diminishes the appearance of wrinkles and fine lines, promoting a smoother skin texture</p>
-                        </li>
-                    </ul>
-            </div>
-        </section>
-    </main>
+        </div>
+        <div class="inetcom"></div>
+        <div class="inetcom__content"></div>
+    </div>
+  
 </body>
-
 </html>
