--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
     <header>
         <div class="container header__container">
             <div class="logo">
-                <img src="../src/img/logo.jpg" alt="логотип">
-            </div>  
+                <img src="./img/logo.jpg" alt="логотип">
+
+            </div>
    
     </header>
     <div class="container">
