--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
         <div class="container header__container">
             <div class="logo">
-                <img src="./img/logo.jpg" alt="логотип">
+                <img src="./logo.jpg" alt="логотип">
 
             </div>
    
